--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -3,5 +3,11 @@ h1,h2,p {
 }
 
 body {
+   background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+}
+
+.menu {
+   width: 80%;
    background-color: burlywood ;
+   margin: 0 auto;
 }
