--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -11,3 +11,17 @@ body {
    background-color: burlywood ;
    margin: 0 auto;
 }
+
+.flavor {
+text-align: left;
+width: 50%;
+}
+
+.price {
+   text-align: right;
+   width: 50%;
+   }
+
+.item p {
+   display: inline-block;
+}
