--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -10,9 +10,10 @@ body {
    width: 80%;
    background-color: burlywood ;
    margin: 0 auto;
+   padding: 20px;
 }
 
-.flavor {
+.flavor, .dessert {
 text-align: left;
 width: 75%;
 }
