--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -4,6 +4,15 @@ h1,h2,p {
 
 body {
    background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+   font-family: sans-serif;
+}
+
+h1,h2 {
+   font-family: Impact, serif;
+}
+
+.established {
+   font-style: italic;
 }
 
 .menu {
@@ -11,6 +20,7 @@ body {
    background-color: burlywood ;
    margin: 0 auto;
    padding: 20px;
+   max-width: 500px;
 }
 
 .flavor, .dessert {
