--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -43,3 +43,9 @@ width: 75%;
 .item p {
    display: inline-block;
 }
+
+hr {
+   height: 2px;
+   background-color: brown;
+   border-color: brown;
+}
