--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -5,6 +5,7 @@ h1,h2,p {
 body {
    background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
    font-family: sans-serif;
+   padding: 20px;
 }
 
 h1 {
@@ -42,10 +43,17 @@ width: 75%;
 
 .item p {
    display: inline-block;
+   margin-top: 5px;
+   margin-bottom: 5px;
+   font-size: 18px;
 }
 
 hr {
    height: 2px;
    background-color: brown;
    border-color: brown;
+}
+
+.bottom-line {
+   margin-top: 25px;
 }
