--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -57,3 +57,17 @@ hr {
 .bottom-line {
    margin-top: 25px;
 }
+
+/* FOOTER */
+
+footer {
+   font-size: 14px;
+}
+
+a {
+   color: black;
+}
+
+a:visited {
+   color: grey;
+}
