--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -69,5 +69,13 @@ a {
 }
 
 a:visited {
-   color: grey;
-}
+   color: black;
+ }
+ 
+ a:hover {
+   color: brown;
+ }
+ 
+ a:active {
+   color: brown;
+ }
