--- a/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
+++ b/Learn Basic CSS by Building a Cafe Menu, Not started/styles.css
@@ -10,6 +10,8 @@ body {
 
 h1 {
    font-size: 40px;
+   margin-top: 0;
+   margin-bottom: 15px;
 }
 h2 {
    font-size: 30px;
@@ -29,6 +31,12 @@ h1,h2 {
    margin: 0 auto;
    padding: 20px;
    max-width: 500px;
+}
+
+img {
+   display: block;
+   margin: 0 auto;
+   margin-top: -25px;
 }
 
 .flavor, .dessert {
@@ -58,6 +66,8 @@ hr {
    margin-top: 25px;
 }
 
+
+
 /* FOOTER */
 
 footer {
@@ -79,3 +89,7 @@ a:visited {
  a:active {
    color: brown;
  }
+
+ .address {
+   margin-bottom: 5px;
+}
