--- a/Learn CSS Colors by Building a Set of Colored Markers, Not started/styles.css
+++ b/Learn CSS Colors by Building a Set of Colored Markers, Not started/styles.css
@@ -9,15 +9,25 @@ h1 {
 }
 
 .one {
-   background-color: rgb(255, 255, 0);
+   background-color: rgb(0, 0, 0);
 }
 
 .two {
-   background-color: rgb(0,255,255);
+   background-color:.one {
+      background-color: rgb(0, 0, 0);
+   }
+   
+   .two {
+      background-color: rgb(0, 0, 0);
+   }
+   
+   .three {
+      background-color: rgb(0, 0, 0);
+   }
 }
 
 .three {
-   background-color: rgb(255,0,255);
+   background-color: rgbrgb(0, 0, 0);
 }
 
 .container {
