--- a/Learn CSS Colors by Building a Set of Colored Markers, Not started/styles.css
+++ b/Learn CSS Colors by Building a Set of Colored Markers, Not started/styles.css
@@ -8,26 +8,19 @@ h1 {
    margin: 10px auto;
 }
 
-.one {
-   background-color: rgb(0, 0, 0);
+.red {
+   background: rgb(255, 0, 0);
  }
  
- .two {
-   background-color: rgb(0, 0, 0);
+ .green {
+   background-color: #007f00
  }
    
-   .two {
-      background-color: rgb(0, 255, 0);
+.blue {
+      background-color: hsl(240,100%,50%)
    }
    
-   .three {
-      background-color: rgb(0, 0, 0);
-   }
-}
 
-.three {
-   background-color: rgbrgb(0, 0, 0);
-}
 
 .container {
    background-color: rgb(255, 255, 255);
